// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/dashboard/staff/payrolls > periodo con formato invalido > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "where": {},
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "where": {
        "estado_pago": "pendiente",
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "where": {
        "estado_pago": "pagado",
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "where": {
        "estado_pago": "anulada",
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "_sum": {
        "monto_neto": true,
      },
      "where": {
        "estado_pago": "pendiente",
      },
    },
    "prisma": "planilla_pago.aggregate",
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "historial_pago_operario": true,
          },
        },
        "operario": true,
        "usuario": true,
      },
      "orderBy": [
        {
          "fecha_generacion": "desc",
        },
        {
          "id_planilla": "desc",
        },
      ],
      "take": 50,
      "where": {},
    },
    "prisma": "planilla_pago.findMany",
  },
]
`;

exports[`/dashboard/staff/payrolls > periodo con formato invalido > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/staff">Personal</a>
</li>
<li>
<svg/>
<span aria-current="page">Planillas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Planillas de pago</h1>
<p>Genera y consulta planillas de pago según operario, periodo, modalidad, tarifa configurada, asistencias válidas y descuentos.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver al módulo">
<svg/>Volver al módulo</button>
<a data-variant="default" href="/dashboard/staff/payrolls/new">Generar planilla</a>
</div>
</div>
</section>
<div>
<div>
<div>Filtros de búsqueda</div>
</div>
<div>
<form>
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar planilla u operario" name="q" value=""/>
</div>
<div>
<label for="operario">ID operario</label>
<input id="operario" placeholder="ID operario" name="operario" value=""/>
</div>
<div>
<label for="periodo">Periodo</label>
<input type="month" id="periodo" name="periodo" value="2026-7"/>
</div>
<div>
<label for="modalidad">Modalidad</label>
<select id="modalidad" name="modalidad">
<option value="" selected="">Todas las modalidades</option>
<option value="semanal">Semanal</option>
<option value="quincenal">Quincenal</option>
<option value="mensual">Mensual</option>
</select>
</div>
<div>
<label for="estado">Estado</label>
<select id="estado" name="estado">
<option value="" selected="">Todos los estados</option>
<option value="pendiente">Pendiente</option>
<option value="pagado">Pagado</option>
<option value="anulada">Anulada</option>
</select>
</div>
<div>
<label for="from">Desde</label>
<input type="date" id="from" name="from" value=""/>
</div>
<div>
<label for="to">Hasta</label>
<input type="date" id="to" name="to" value=""/>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/staff/payrolls">Limpiar filtros</a>
</div>
</form>
</div>
</div>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Planillas generadas</div>
</div>
</div>
<div>
<p>42</p>
<p>Total histórico registrado.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Pendientes</div>
</div>
</div>
<div>
<p>42</p>
<p>Por pagar: S/ 1234.50</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Pagadas</div>
</div>
</div>
<div>
<p>42</p>
<p>Se marcarán en la siguiente subfase.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Anuladas</div>
</div>
</div>
<div>
<p>42</p>
<p>Registros descartados.</p>
</div>
</div>
</section>
<div>
<div>
<div>Últimas planillas generadas</div>
</div>
<div>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Operario</th>
<th>Periodo</th>
<th>Modalidad</th>
<th>Bruto</th>
<th>Descuentos</th>
<th>Neto</th>
<th>Estado</th>
<th>Generado por</th>
<th>Acción</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_planilla-1</td>
<td>apellidos-1, nombres-1</td>
<td>01/07/2026 - 01/07/2026</td>
<td>modalidad_pago-1</td>
<td>S/ 11.50</td>
<td>S/ 11.50</td>
<td>S/ 11.50</td>
<td>
<span data-variant="secondary">estado_pago-1</span>
</td>
<td>nombres-1 apellidos-1</td>
<td>
<span>Sin acción</span>
</td>
</tr>
<tr>
<td>id_planilla-2</td>
<td>apellidos-2, nombres-2</td>
<td>02/07/2026 - 02/07/2026</td>
<td>modalidad_pago-2</td>
<td>S/ 22.50</td>
<td>S/ 22.50</td>
<td>S/ 22.50</td>
<td>
<span data-variant="secondary">estado_pago-2</span>
</td>
<td>nombres-2 apellidos-2</td>
<td>
<span>Sin acción</span>
</td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/staff/payrolls > sin filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "where": {},
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "where": {
        "estado_pago": "pendiente",
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "where": {
        "estado_pago": "pagado",
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "where": {
        "estado_pago": "anulada",
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "_sum": {
        "monto_neto": true,
      },
      "where": {
        "estado_pago": "pendiente",
      },
    },
    "prisma": "planilla_pago.aggregate",
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "historial_pago_operario": true,
          },
        },
        "operario": true,
        "usuario": true,
      },
      "orderBy": [
        {
          "fecha_generacion": "desc",
        },
        {
          "id_planilla": "desc",
        },
      ],
      "take": 50,
      "where": {},
    },
    "prisma": "planilla_pago.findMany",
  },
]
`;

exports[`/dashboard/staff/payrolls > sin filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/staff">Personal</a>
</li>
<li>
<svg/>
<span aria-current="page">Planillas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Planillas de pago</h1>
<p>Genera y consulta planillas de pago según operario, periodo, modalidad, tarifa configurada, asistencias válidas y descuentos.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver al módulo">
<svg/>Volver al módulo</button>
<a data-variant="default" href="/dashboard/staff/payrolls/new">Generar planilla</a>
</div>
</div>
</section>
<div>
<div>
<div>Filtros de búsqueda</div>
</div>
<div>
<form>
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar planilla u operario" name="q" value=""/>
</div>
<div>
<label for="operario">ID operario</label>
<input id="operario" placeholder="ID operario" name="operario" value=""/>
</div>
<div>
<label for="periodo">Periodo</label>
<input type="month" id="periodo" name="periodo" value=""/>
</div>
<div>
<label for="modalidad">Modalidad</label>
<select id="modalidad" name="modalidad">
<option value="" selected="">Todas las modalidades</option>
<option value="semanal">Semanal</option>
<option value="quincenal">Quincenal</option>
<option value="mensual">Mensual</option>
</select>
</div>
<div>
<label for="estado">Estado</label>
<select id="estado" name="estado">
<option value="" selected="">Todos los estados</option>
<option value="pendiente">Pendiente</option>
<option value="pagado">Pagado</option>
<option value="anulada">Anulada</option>
</select>
</div>
<div>
<label for="from">Desde</label>
<input type="date" id="from" name="from" value=""/>
</div>
<div>
<label for="to">Hasta</label>
<input type="date" id="to" name="to" value=""/>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/staff/payrolls">Limpiar filtros</a>
</div>
</form>
</div>
</div>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Planillas generadas</div>
</div>
</div>
<div>
<p>42</p>
<p>Total histórico registrado.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Pendientes</div>
</div>
</div>
<div>
<p>42</p>
<p>Por pagar: S/ 1234.50</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Pagadas</div>
</div>
</div>
<div>
<p>42</p>
<p>Se marcarán en la siguiente subfase.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Anuladas</div>
</div>
</div>
<div>
<p>42</p>
<p>Registros descartados.</p>
</div>
</div>
</section>
<div>
<div>
<div>Últimas planillas generadas</div>
</div>
<div>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Operario</th>
<th>Periodo</th>
<th>Modalidad</th>
<th>Bruto</th>
<th>Descuentos</th>
<th>Neto</th>
<th>Estado</th>
<th>Generado por</th>
<th>Acción</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_planilla-1</td>
<td>apellidos-1, nombres-1</td>
<td>01/07/2026 - 01/07/2026</td>
<td>modalidad_pago-1</td>
<td>S/ 11.50</td>
<td>S/ 11.50</td>
<td>S/ 11.50</td>
<td>
<span data-variant="secondary">estado_pago-1</span>
</td>
<td>nombres-1 apellidos-1</td>
<td>
<span>Sin acción</span>
</td>
</tr>
<tr>
<td>id_planilla-2</td>
<td>apellidos-2, nombres-2</td>
<td>02/07/2026 - 02/07/2026</td>
<td>modalidad_pago-2</td>
<td>S/ 22.50</td>
<td>S/ 22.50</td>
<td>S/ 22.50</td>
<td>
<span data-variant="secondary">estado_pago-2</span>
</td>
<td>nombres-2 apellidos-2</td>
<td>
<span>Sin acción</span>
</td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/staff/payrolls > todos los filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "where": {
        "AND": [
          {
            "OR": [
              {
                "id_planilla": {
                  "contains": "quispe",
                  "mode": "insensitive",
                },
              },
              {
                "operario": {
                  "nombres": {
                    "contains": "quispe",
                    "mode": "insensitive",
                  },
                },
              },
              {
                "operario": {
                  "apellidos": {
                    "contains": "quispe",
                    "mode": "insensitive",
                  },
                },
              },
            ],
          },
          {
            "id_operario": {
              "contains": "OPE",
              "mode": "insensitive",
            },
          },
          {
            "periodo_fin": {
              "lte": 2026-07-31T00:00:00.000Z,
            },
            "periodo_inicio": {
              "gte": 2026-07-01T00:00:00.000Z,
            },
          },
          {
            "modalidad_pago": "semanal",
          },
          {
            "estado_pago": "pendiente",
          },
          {
            "fecha_generacion": {
              "gte": 2026-07-01T00:00:00.000Z,
              "lte": 2026-07-31T23:59:59.999Z,
            },
          },
        ],
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "where": {
        "estado_pago": "pendiente",
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "where": {
        "estado_pago": "pagado",
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "where": {
        "estado_pago": "anulada",
      },
    },
    "prisma": "planilla_pago.count",
  },
  {
    "args": {
      "_sum": {
        "monto_neto": true,
      },
      "where": {
        "estado_pago": "pendiente",
      },
    },
    "prisma": "planilla_pago.aggregate",
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "historial_pago_operario": true,
          },
        },
        "operario": true,
        "usuario": true,
      },
      "orderBy": [
        {
          "fecha_generacion": "desc",
        },
        {
          "id_planilla": "desc",
        },
      ],
      "take": 50,
      "where": {
        "AND": [
          {
            "OR": [
              {
                "id_planilla": {
                  "contains": "quispe",
                  "mode": "insensitive",
                },
              },
              {
                "operario": {
                  "nombres": {
                    "contains": "quispe",
                    "mode": "insensitive",
                  },
                },
              },
              {
                "operario": {
                  "apellidos": {
                    "contains": "quispe",
                    "mode": "insensitive",
                  },
                },
              },
            ],
          },
          {
            "id_operario": {
              "contains": "OPE",
              "mode": "insensitive",
            },
          },
          {
            "periodo_fin": {
              "lte": 2026-07-31T00:00:00.000Z,
            },
            "periodo_inicio": {
              "gte": 2026-07-01T00:00:00.000Z,
            },
          },
          {
            "modalidad_pago": "semanal",
          },
          {
            "estado_pago": "pendiente",
          },
          {
            "fecha_generacion": {
              "gte": 2026-07-01T00:00:00.000Z,
              "lte": 2026-07-31T23:59:59.999Z,
            },
          },
        ],
      },
    },
    "prisma": "planilla_pago.findMany",
  },
]
`;

exports[`/dashboard/staff/payrolls > todos los filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/staff">Personal</a>
</li>
<li>
<svg/>
<span aria-current="page">Planillas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Planillas de pago</h1>
<p>Genera y consulta planillas de pago según operario, periodo, modalidad, tarifa configurada, asistencias válidas y descuentos.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver al módulo">
<svg/>Volver al módulo</button>
<a data-variant="default" href="/dashboard/staff/payrolls/new">Generar planilla</a>
</div>
</div>
</section>
<div>
<div>
<div>Filtros de búsqueda</div>
</div>
<div>
<form>
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar planilla u operario" name="q" value="quispe"/>
</div>
<div>
<label for="operario">ID operario</label>
<input id="operario" placeholder="ID operario" name="operario" value="OPE"/>
</div>
<div>
<label for="periodo">Periodo</label>
<input type="month" id="periodo" name="periodo" value="2026-07"/>
</div>
<div>
<label for="modalidad">Modalidad</label>
<select id="modalidad" name="modalidad">
<option value="">Todas las modalidades</option>
<option value="semanal" selected="">Semanal</option>
<option value="quincenal">Quincenal</option>
<option value="mensual">Mensual</option>
</select>
</div>
<div>
<label for="estado">Estado</label>
<select id="estado" name="estado">
<option value="">Todos los estados</option>
<option value="pendiente" selected="">Pendiente</option>
<option value="pagado">Pagado</option>
<option value="anulada">Anulada</option>
</select>
</div>
<div>
<label for="from">Desde</label>
<input type="date" id="from" name="from" value="2026-07-01"/>
</div>
<div>
<label for="to">Hasta</label>
<input type="date" id="to" name="to" value="2026-07-31"/>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/staff/payrolls">Limpiar filtros</a>
</div>
</form>
</div>
</div>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Planillas generadas</div>
</div>
</div>
<div>
<p>42</p>
<p>Total histórico registrado.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Pendientes</div>
</div>
</div>
<div>
<p>42</p>
<p>Por pagar: S/ 1234.50</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Pagadas</div>
</div>
</div>
<div>
<p>42</p>
<p>Se marcarán en la siguiente subfase.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Anuladas</div>
</div>
</div>
<div>
<p>42</p>
<p>Registros descartados.</p>
</div>
</div>
</section>
<div>
<div>
<div>Últimas planillas generadas</div>
</div>
<div>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Operario</th>
<th>Periodo</th>
<th>Modalidad</th>
<th>Bruto</th>
<th>Descuentos</th>
<th>Neto</th>
<th>Estado</th>
<th>Generado por</th>
<th>Acción</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_planilla-1</td>
<td>apellidos-1, nombres-1</td>
<td>01/07/2026 - 01/07/2026</td>
<td>modalidad_pago-1</td>
<td>S/ 11.50</td>
<td>S/ 11.50</td>
<td>S/ 11.50</td>
<td>
<span data-variant="secondary">estado_pago-1</span>
</td>
<td>nombres-1 apellidos-1</td>
<td>
<span>Sin acción</span>
</td>
</tr>
<tr>
<td>id_planilla-2</td>
<td>apellidos-2, nombres-2</td>
<td>02/07/2026 - 02/07/2026</td>
<td>modalidad_pago-2</td>
<td>S/ 22.50</td>
<td>S/ 22.50</td>
<td>S/ 22.50</td>
<td>
<span data-variant="secondary">estado_pago-2</span>
</td>
<td>nombres-2 apellidos-2</td>
<td>
<span>Sin acción</span>
</td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/staff/payrolls/new > formulario > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "asistencia": true,
            "planilla_pago": true,
          },
        },
      },
      "orderBy": [
        {
          "apellidos": "asc",
        },
        {
          "nombres": "asc",
        },
      ],
      "where": {
        "estado": "activo",
      },
    },
    "prisma": "operario.findMany",
  },
]
`;

exports[`/dashboard/staff/payrolls/new > formulario > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/staff">Personal</a>
</li>
<li>
<svg/>
<a href="/dashboard/staff/payrolls">Planillas</a>
</li>
<li>
<svg/>
<span aria-current="page">Nueva planilla</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Generar planilla de pago</h1>
<p>Selecciona un operario y un periodo. El sistema calculará el monto según asistencias válidas, tarifa configurada y descuentos.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver al listado">
<svg/>Volver al listado</button>
<span data-variant="default">Solo ADMIN</span>
</div>
</div>
</section>
<section>
<div>
<div>
<div>Datos para generación</div>
</div>
<div>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<div>
<div>
<label for="id_operario-_R_1d6_">Operario *</label>
<input type="hidden" name="id_operario" value=""/>
<div>
<input id="id_operario-_R_1d6_" type="text" role="combobox" aria-autocomplete="list" aria-controls="id_operario-_R_1d6_-listbox" aria-expanded="false" required="" placeholder="Buscar operario..." value=""/>
</div>
</div>
<p>La tarifa se multiplicará por las asistencias válidas del periodo seleccionado.</p>
</div>
<div>
<div>
<label for="periodo_inicio">Inicio del periodo</label>
<input type="date" id="periodo_inicio" required="" name="periodo_inicio" value="2026-07-09"/>
</div>
<div>
<label for="periodo_fin">Fin del periodo</label>
<input type="date" id="periodo_fin" required="" name="periodo_fin" value="2026-07-15"/>
</div>
<div>
<label for="descuentos">Descuentos</label>
<input type="number" id="descuentos" min="0" step="0.01" placeholder="Ejemplo: 10.00" name="descuentos" value="0"/>
</div>
</div>
<div>
<button data-variant="default" type="submit">Generar planilla</button>
<a data-variant="outline" href="/dashboard/staff/payrolls">Ver listado</a>
</div>
</form>
</div>
</div>
<div>
<div>
<div>Reglas de cálculo</div>
</div>
<div>
<p>La planilla se genera por un operario y un rango de fechas.</p>
<p>Solo se consideran asistencias donde el operario no tenga falta.</p>
<p>El monto bruto se calcula multiplicando asistencias válidas por la tarifa registrada del operario.</p>
<p>Los descuentos se restan del monto bruto para obtener el monto neto.</p>
<p>La planilla se crea con estado pendiente. En la siguiente subfase registraremos el pago real.</p>
</div>
</div>
</section>
<div>
<div>
<div>Operarios disponibles para planilla</div>
</div>
<div>
<div>
<table>
<thead>
<tr>
<th>Operario</th>
<th>Modalidad</th>
<th>Tarifa</th>
<th>Asistencias</th>
<th>Planillas</th>
</tr>
</thead>
<tbody>
<tr>
<td>apellidos-1, nombres-1</td>
<td>modalidad_pago-1</td>
<td>S/ 11.50</td>
<td>2</td>
<td>2</td>
</tr>
<tr>
<td>apellidos-2, nombres-2</td>
<td>modalidad_pago-2</td>
<td>-</td>
<td>2</td>
<td>2</td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;
